--- a/docs/TODO
+++ b/docs/TODO
@@ -1,12 +1,12 @@
 
-1 unit testing
+DONE unit testing
 1 improve speed: load chunks of data from files instead going line by line 
 1 improve speed: recode the reverse complement
-1 separate code in different files (check lh3)
+DONE separate code in different files
 DONE 1 compare with c egenotype
 DONE 1 add strandness
-1 add lh3 lib for working on fastq and fasta
 
+2 add lh3 lib for working on fastq and fasta
 2 improve processing arguments
 2 process compress input
 2 color space
